# juce-audio-plugins

./: README.md  flake.nix  new_plugin
audio_plugin_template/: CMakeLists.txt  README.md
audio_plugin_template/src/: CMakeLists.txt
border_security_plugin/: CMakeLists.txt  README.md  audio-plugin.code-workspace
border_security_plugin/src/: CMakeLists.txt  PluginEditor.cpp
